Adding search feature

--- a/source/As.Posterr.Domain/Fields.resx
+++ b/source/As.Posterr.Domain/Fields.resx
@@ -121,7 +121,7 @@
     <value>Profile</value>
   </data>
   <data name="TextPost" xml:space="preserve">
-    <value>Post</value>
+    <value>Text</value>
   </data>
   <data name="Username" xml:space="preserve">
     <value>Username</value>
